fix: lock app to viewport on iPhone Safari

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,5 @@
 }
 
 body {
-  background: white;
-}
-
-html.dark body {
-  background: black;
+  @apply bg-white dark:bg-black;
 }
